deserialize pictures